--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,14 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
+Imports: 
+    assertr,
+    assertthat,
+    data.table,
+    furrr,
+    here,
+    magrittr,
+    purrr,
+    rvest,
+    stringr,
+    targets
