--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Description: Download, clean, cross-reference, and load into database relevant o
 License: MIT + file LICENSE
 Suggests: 
     microbenchmark,
+    profvis,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
